--- a/front/public/global.css
+++ b/front/public/global.css
@@ -2,12 +2,12 @@ html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
 	color: #333;
-	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
@@ -60,4 +60,24 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
